# McDCIR_RDC

./: 2_tracker.cc  3_synchronization.cc  4_camera_calib.cc  4_camera_calib.sh  80kVp.txt  CMakeLists.txt  CMakeLists_s.txt  DCIR_RDC.cc  README.md  RemoteCal.cc  RemoteCal.files  RemoteCal.includes  RemoteCal_v1.files  RemoteCal_v1.includes  beam.ply  c-arm.ply  calculator.cc  calculator_v2.cc  config.txt  detector_params.yml  extern  helper  kinect2160.yml  leadGlass.ply  listener.cc  patient.ele  patient.node  patient.ply  patient3.ele  patient3.node  profile.txt  simple.ply  simple2.W  simple2.Wj  simple2.ply  simple3.ply  simple3.tgf  simple3_eye.ply  sphere.ply  sync.txt  (+4 more)
include/: CharucoSync.hh  ClientSocket.h  ClientSocket.hh  Communicator.hh  Config.hh  GlassTracker.hh  Kinect2OpenCV.hh  MapContainer.hh  ModelImport.h  ModelImport.hh  OCR_Config.hh  OCR_Func.h  OCR_ImageProcessor.hh  OCR_KNN.hh  OCR_main.hh  PhantomAnimator.hh  RDCWindow.hh  ServerSocket.h  ServerSocket.hh  Socket.h  Socket.hh  Viewer.hh  actioninitialization.hh  bodytracking.hh  colorbar.hh  detectorconstruction.hh  detectormessenger.hh  detmessenger.hh  eventaction.hh  functions.h  functions.hh  meshhit.hh  meshsd.hh  parallelmesh.hh  primarygeneratoraction.hh  primarymessenger.hh  run.hh  runaction.hh  stackingaction.hh  tetparam.hh
phantoms/: AM.W  AM.W_apron  AM.Wj  AM.Wj_apron  AM.tgf  AM_2.W  AM_2.Wj  AM_2.ply  AM_2_apron.W  AM_2_apron.Wj  AM_2_apron.ply  F_H175W135.ply  F_H175W135.tgf  F_H175W135_eye.ply  M_H160W50.ply  M_H160W50.tgf  M_H190W140.ply  M_H190W140.tgf  simple2_eye.ply
src/: CharucoSync.cc  ClientSocket.cc  ClientSocket.cpp  Communicator.cc  Config.cc  GlassTracker.cc  MapContainer.cc  ModelImport.cc  OCR_Config.cc  OCR_ImageProcessor.cc  OCR_KNN.cc  OCR_config.cc  OCR_main.cc  PhantomAnimator.cc  RDCWindow.cc  ServerSocket.cc  ServerSocket.cpp  Socket.cc  Viewer.cc  actioninitialization.cc  detectorconstruction.cc  detectormessenger.cc  detmessenger.cc  eventaction.cc  functions.cc  meshsd.cc  parallelmesh.cc  primarygeneratoraction.cc  primarymessenger.cc  run.cc  runaction.cc  stackingaction.cc  tetparam.cc
